--- a/case-details.html
+++ b/case-details.html
@@ -101,7 +101,7 @@
   <!-- end email-us -->
   <div class="languages"> <a href="#" class="active">EN</a> <a href="#">RU</a> </div>
   <!-- end languages -->
-  <div class="sandwich-nav"> <b>MENU</b>
+  <div class="sandwich-nav"> <b>MENU-yrnu</b>
     <div class="sandwich-btn circle" id="sandwich-btn" data-dist="7"> <span></span> <span></span> </div>
     <!-- end sandwich-btn --> 
     
