--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="swiper-container gallery-top">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <div class="slide-inner bg-image" data-background="images/Banner-3.webp"> </div>
+          <div class="slide-inner bg-image" data-background="images/Hospitality.webp"> </div>
           <!-- end slide-inner --> 
         </div>
         <!-- end swiper-slide -->
@@ -134,7 +134,7 @@
     </div>
     <div class="swiper-container gallery-thumbs">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"> Collabration<a href="#">Explore Case Study
+        <div class="swiper-slide"> Hospitality<a href="#">Explore Case Study
           <div class="plus">+</div>
           </a> </div>
         <!-- end swiper-slide -->
