--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
         <!-- end swiper-slide -->
         <div class="swiper-slide">
-          <div class="slide-inner bg-image" data-background="images/Banner-4.webp"> </div>
+          <div class="slide-inner bg-image" data-background="images/E-Commerce"> </div>
           <!-- end slide-inner --> 
         </div>
         <!-- end swiper-slide -->
@@ -138,7 +138,7 @@
           <div class="plus">+</div>
           </a> </div>
         <!-- end swiper-slide -->
-        <div class="swiper-slide"> The Biker<a href="#">Explore Case Study
+        <div class="swiper-slide"> E-Commerce<a href="#">Explore Case Study
           <div class="plus">+</div>
           </a> </div>
         <!-- end swiper-slide -->
