--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
         <!-- end swiper-slide -->
         <div class="swiper-slide">
-          <div class="slide-inner bg-image" data-background="images/E-Commerce"> </div>
+          <div class="slide-inner bg-image" data-background="images/E-Commerce.webp"> </div>
           <!-- end slide-inner --> 
         </div>
         <!-- end swiper-slide -->
