--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
         </div>
         <!-- end swiper-slide -->
         <div class="swiper-slide">
-          <div class="slide-inner bg-image" data-background="images/Banner-5.webp"> </div>
+          <div class="slide-inner bg-image" data-background="images/Automobile.webp"> </div>
+          <!-- end slide-inner --> 
+        </div>
+        <!-- end swiper-slide --> 
+        <div class="swiper-slide">
+          <div class="slide-inner bg-image" data-background="images/B2b.webp"> </div>
           <!-- end slide-inner --> 
         </div>
         <!-- end swiper-slide --> 
@@ -142,7 +147,11 @@
           <div class="plus">+</div>
           </a> </div>
         <!-- end swiper-slide -->
-        <div class="swiper-slide"> Exhitibiton<a href="#">Explore Case Study
+        <div class="swiper-slide"> Automobile<a href="#">Explore Case Study
+          <div class="plus">+</div>
+          </a> </div>
+        <!-- end swiper-slide --> 
+        <div class="swiper-slide"> B2B <a href="#">Explore Case Study
           <div class="plus">+</div>
           </a> </div>
         <!-- end swiper-slide --> 
