--- a/ikshana-case-study.html
+++ b/ikshana-case-study.html
@@ -118,8 +118,8 @@
     </div>
     <!-- end video-bg -->
     <div class="inner">
-      <h2 data-text="PROJECT">PROJECT</h2>
-      <p>We work in an integral manner and address projects in the following dimensions.</p>
+      <h2 data-text="PROJECT">Ikshana</h2>
+      <p>A Journey from Hospitality School to Luxury Destination</p>
     </div>
     <!-- end inner -->
     <ul class="social-media">
@@ -140,7 +140,7 @@
       <div class="case-navbar">
         <div class="container">
           <ul>
-            <li> <a href="#case-section-1">Client</a> </li>
+            <li> <a href="#case-section-1">Overview</a> </li>
             <li> <a href="#case-section-2">Challanges</a> </li>
             <li> <a href="#case-section-3">Solution</a> </li>
             <li> <a href="#case-section-4">Immersive Visuals</a> </li>
@@ -154,13 +154,15 @@
         <div class="row">
 
           <div class="col-6 wow fadeInUp" id="case-section-1">
-            <h3 style="margin-top: 0px;">Client</h3>
-            <h6>We are looking for individuals who are ready to develop daily and not afraid of difficult tasks</h6>
-            <p>So, the height and width is not fixed, and it is calculated dynamically according to the diminutions of
-              the window. Under that div, there is another one that has the<b> ID header</b> “navigation bar”, the
-              header is initially <em>positioned</em> relatively under div.fullscreen – however, I am trying to position
-              it as Fixed when the top of the #header reaches the top of the browser window. So here is what I am
-              <u>playing around</u>, it toggles the Fixed style, but it does not toggle it at the right place…
+            <h3 style="margin-top: 0px;">Overview</h3>
+          
+            <p>Nestled in the tranquil valleys of Khandala, the Ikshana Resort and Spa by Kohinoor Hospitality stands as
+              a testament to reimagined luxury. In a region where resorts and hotels compete to blend with the
+              picturesque surroundings of Khandala and Lonavala, the challenge is to stand out as a premium destination.
+              At Happy Us Entertainment, we embarked on a journey to position Ikshana Resort as a beacon of understated
+              elegance, ensuring it resonated with the ethos of calm luxury. By combining our expertise in branding,
+              design, and storytelling, we created a holistic experience that elevated Ikshana beyond its competition,
+              making it a destination rather than just another resort.…
             </p>
           </div>
           <div class="col-6 wow fadeInUp" id="case-section-1">
@@ -241,26 +243,26 @@
           <div class="col-6 wow fadeInUp" id="case-section-5">
             <figure style="margin-top: 85px;"><img src="images/Website.webp" alt="Image"></figure>
           </div>
-          <div class="col-12">   
+          <div class="col-12">
             <div class="col-6 wow fadeInUp">
-     <figure style="margin-top: 85px;"><img src="images/insta ikshana (1).webp" alt="Image"></figure>
-   </div>
-   <div class="col-12 wow fadeInUp" >
-     <h3>Social Media</h3>
-     <p style="display: flex;"> Highlighted key features and
-       amenities to position the resort
-       as a luxurious getaway in Khandala
-     </p>
-   </div>
-        </div>
+              <figure style="margin-top: 85px;"><img src="images/insta ikshana (1).webp" alt="Image"></figure>
+            </div>
+            <div class="col-12 wow fadeInUp">
+              <h3>Social Media</h3>
+              <p style="display: flex;"> Highlighted key features and
+                amenities to position the resort
+                as a luxurious getaway in Khandala
+              </p>
+            </div>
+          </div>
 
         </div>
         <!-- end row -->
       </div>
       <!-- end container -->
     </section>
-   
- 
+
+
     <footer class="footer">
       <div class="container"> <img src="images/logo.png" alt="Image">
         <h2>Don't be shy and<br>
