--- a/ikshana-case-study.html
+++ b/ikshana-case-study.html
@@ -118,7 +118,7 @@
     </div>
     <!-- end video-bg -->
     <div class="inner">
-      <h2 data-text="PROJECT">Ikshana</h2>
+      <h2 data-text="Ikshana">Ikshana</h2>
       <p>A Journey from Hospitality School to Luxury Destination</p>
     </div>
     <!-- end inner -->
@@ -220,7 +220,7 @@
           <!-- end col-3 -->
           <div class="col-12 wow fadeInUp" id="case-section-4">
             <h3>Immersive Visuals </h3>
-            <h6>Immersive Visuals and Storytelling</h6>
+            <h6 class="visual">Immersive Visuals and Storytelling</h6>
             <p>Conducted a high-quality photoshoot featuring wide-angle and architectural shots, complemented by drone
               photography that captured the serene beauty of the valley and the resort's elegance. Produced videos
               showcasing the resort’s allure, crafting a compelling visual narrative.
@@ -235,7 +235,7 @@
           <!-- end col-12 -->
           <div class="col-6 wow fadeInUp" id="case-section-4">
             <h3>Website</h3>
-            <h6>Building a User-Centric Websites</h6>
+            <h6 class="website">Building a User-Centric Websites</h6>
             <p>Designed an intuitive and visually appealing website that reflected the resort's premium nature, offering
               seamless navigation to enhance user experience.
             </p>
