--- a/ikshana-case-study.html
+++ b/ikshana-case-study.html
@@ -153,9 +153,9 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-6 wow fadeInUp" id="case-section-1">
+          <div class="col-lg-6 wow fadeInUp" id="case-section-1">
             <h3 style="margin-top: 0px;">Overview</h3>
-          
+
             <p>Nestled in the tranquil valleys of Khandala, the Ikshana Resort and Spa by Kohinoor Hospitality stands as
               a testament to reimagined luxury. In a region where resorts and hotels compete to blend with the
               picturesque surroundings of Khandala and Lonavala, the challenge is to stand out as a premium destination.
@@ -165,7 +165,7 @@
               making it a destination rather than just another resort.…
             </p>
           </div>
-          <div class="col-6 wow fadeInUp" id="case-section-1">
+          <div class="col-lg-6 wow fadeInUp" id="case-section-1">
             <figure><img src="images/Ikshan logo.webp" alt="Image"></figure>
           </div>
 
@@ -233,28 +233,29 @@
           <!-- end col-12 -->
 
           <!-- end col-12 -->
-          <div class="col-6 wow fadeInUp" id="case-section-4">
+          <div class="col-lg-6 wow fadeInUp" id="case-section-4">
             <h3>Website</h3>
             <h6 class="website">Building a User-Centric Websites</h6>
             <p>Designed an intuitive and visually appealing website that reflected the resort's premium nature, offering
               seamless navigation to enhance user experience.
             </p>
           </div>
-          <div class="col-6 wow fadeInUp" id="case-section-5">
+          <div class="col-lg-6 wow fadeInUp" id="case-section-5">
             <figure style="margin-top: 85px;"><img src="images/Website.webp" alt="Image"></figure>
           </div>
-          <div class="col-12">
-            <div class="col-6 wow fadeInUp">
-              <figure style="margin-top: 85px;"><img src="images/insta ikshana (1).webp" alt="Image"></figure>
-            </div>
-            <div class="col-12 wow fadeInUp">
-              <h3>Social Media</h3>
-              <p style="display: flex;"> Highlighted key features and
-                amenities to position the resort
-                as a luxurious getaway in Khandala
-              </p>
-            </div>
+          
+
+          <div class="col-lg-6 wow fadeInUp">
+            <figure style="margin-top: 85px;"><img src="images/insta ikshana (1).webp" alt="Image"></figure>
           </div>
+          <div class="col-lg-6 wow fadeInUp">
+            <h3 style="font-size: 57px;">Social Media</h3>
+            <p> Highlighted key features and
+              amenities to position the resort
+              as a luxurious getaway in Khandala
+            </p>
+          </div>
+
 
         </div>
         <!-- end row -->
