--- a/index-particles.html
+++ b/index-particles.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="format-detection" content="telephone=no">
-<meta name="theme-color" content="#33a16e"/>
+<meta name="theme-color" content="#ed7207"/>
 <title>Unicord | Creative Portfolio for Freelancers & Agencies</title>
 <meta name="author" content="Themezinho">
 <meta name="description" content="Unicord | Creative Portfolio for Freelancers & Agencies">
