--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
   <nav class="navbar">
     <div class="logo"> <a href="index.html"><img src="images/logo.png" alt="Image"></a> </div>
     <!-- end logo -->
-    <div class="email-us">Say <a href="#"><span>hello</span>@unicord.com</a></div>
+    <div class="email-us">Say <a href="#"><span>hello</span>  Info@happyusentertainment.com</a></div>
     <!-- end email-us -->
-    <div class="languages"> <a href="#" class="active">EN</a> <a href="#">RU</a> </div>
+    <!-- <div class="languages"> <a href="#" class="active">EN</a> <a href="#">RU</a> </div> -->
     <!-- end languages -->
     <div class="sandwich-nav"> <b>MENU</b>
       <div class="sandwich-btn circle" id="sandwich-btn" data-dist="7"> <span></span> <span></span> </div>
@@ -362,7 +362,7 @@
    <img src="images/logo.png" alt="Image">
     <h2>Don't be shy and<br>
       talk to us?</h2>
-    <h5>Say hello@unicord.com.ua </h5>
+    <h5>Say info@happyusentertainment.com </h5>
     <ul>
       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
