--- a/index.html
+++ b/index.html
@@ -68,22 +68,12 @@
     <div class="black-layer"></div>
     <div class="inner">
       <ul>
-        <li><a href="#">Start</a>
-          <ul>
-            <li><a href="index.html">Slider</a></li>
-            <li><a href="index-video-bg.html">Video BG</a></li>
-            <li><a href="index-particles.html">Particles</a></li>
-            <li><a href="index-motion-blur.html">Motion Blur</a></li>
-            <li><a href="index-animation.html">Animation</a></li>
-          </ul>
+        <li><a href="index.html">Home</a>
+          
         </li>
-        <li><a href="unicord.html">Unicord</a></li>
-        <li><a href="#">Showcases</a>
-          <ul>
-            <li><a href="showcases-four-cols.html">4 Columns</a></li>
-            <li><a href="showcases-three-cols.html">3 Columns</a></li>
-            <li><a href="showcases-two-cols.html">2 Columns</a></li>
-          </ul>
+        <li><a href="unicord.html">About Us</a></li>>
+        <li><a href="showcases-four-cols.html">Case Studies</a>
+          
         </li>
         <li><a href="news.html">News</a></li>
         <li><a href="say-hello.html">Say Hello</a></li>
@@ -102,7 +92,7 @@
     <!-- end logo -->
     <div class="email-us">Say <a href="#"><span>hello</span> Info@happyusentertainment.com</a></div>
     <!-- end email-us -->
-    <!-- <div class="languages"> <a href="#" class="active">EN</a> <a href="#">RU</a> </div> -->
+    <!--  -->
     <!-- end languages -->
     <div class="sandwich-nav"> <b>MENU</b>
       <div class="sandwich-btn circle" id="sandwich-btn" data-dist="7"> <span></span> <span></span> </div>
@@ -190,7 +180,7 @@
           <figure data-tilt> <img src="images/Toyota (2).webp" alt="Image" class="thumb">
             <figcaption> <img src="images/Lakozy.png" alt="Image" class="brand">
               <h3>Toyota</h3>
-              <small>Web Design, HTML, Development</small> <a href="case-details.html">CASE DETAILS</a>
+              <small>Web Design, HTML, Development</small> <a href="lakozy-toyota-case-study.html">CASE DETAILS</a>
             </figcaption>
           </figure>
         </li>
@@ -198,7 +188,7 @@
           <figure data-tilt> <img src="images/BaaMee.webp" alt="Image" class="thumb">
             <figcaption> <img src="images/BaaMee.png" alt="Image" class="brand">
               <h3>Baamee</h3>
-              <small>App Development, UI-UX Design</small> <a href="case-details.html">CASE DETAILS</a>
+              <small>App Development, UI-UX Design</small> <a href="baame-case-study.html">CASE DETAILS</a>
             </figcaption>
           </figure>
         </li>
@@ -270,7 +260,7 @@
           <figure data-tilt> <img src="images/Minimax.webp" alt="Image" class="thumb">
             <figcaption> <img src="images/Minimax logo (1).png" alt="Image" class="brand">
               <h3>Minimax</h3>
-              <small>Branding, Print Design</small> <a href="case-details.html">CASE DETAILS</a>
+              <small>Branding, Print Design</small> <a href="minimax-case-study.html">CASE DETAILS</a>
             </figcaption>
           </figure>
         </li>
@@ -293,31 +283,31 @@
               <div class="col-md-4 wow fadeInUp"> <img src="images/icon01.png" alt="Image">
                 <h4>Brand Identity & Positioning</h4>
                 <p>Unicord provides a fantastic living experience.</p>
-                <a href="#">LEARN MORE</a>
+                <a href="branding.html">LEARN MORE</a>
               </div>
               <!-- end col-4 -->
               <div class="col-md-4 wow fadeInUp"> <img src="images/icon02.png" alt="Image">
                 <h4>Website Design & Development</h4>
                 <p>Website and add some advanced lacks.</p>
-                <a href="#">LEARN MORE</a>
+                <a href="website.html">LEARN MORE</a>
               </div>
               <!-- end col-4 -->
               <div class="col-md-4 wow fadeInUp"> <img src="images/icon03.png" alt="Image">
                 <h4>SEO & SEM</h4>
                 <p>Website and add some advanced functionality.</p>
-                <a href="#">LEARN MORE</a>
+                <a href="seo1.html">LEARN MORE</a>
               </div>
               <!-- end col-4 -->
               <div class="col-md-4 wow fadeInUp"> <img src="images/icon02.png" alt="Image">
                 <h4>Digital Lead Generation & Conversion Rate Optimization</h4>
                 <p>Website and add some advanced functionality</p>
-                <a href="#">LEARN MORE</a>
+                <a href="cro.html">LEARN MORE</a>
               </div>
               <!-- end col-4 -->
               <div class="col-md-4 wow fadeInUp"> <img src="images/icon03.png" alt="Image">
                 <h4>Photography & Videography</h4>
                 <p>Website and add some advanced functionality</p>
-                <a href="#">LEARN MORE</a>
+                <a href="photography.html">LEARN MORE</a>
               </div>
               <!-- end col-4 -->
               <div class="col-md-4 wow fadeInUp"> <img src="images/icon03.png" alt="Image">
