--- a/ikshana-case-study.html
+++ b/ikshana-case-study.html
@@ -68,22 +68,12 @@
     <div class="black-layer"></div>
     <div class="inner">
       <ul>
-        <li><a href="#">Start</a>
-          <ul>
-            <li><a href="index.html">Slider</a></li>
-            <li><a href="index-video-bg.html">Video BG</a></li>
-            <li><a href="index-particles.html">Particles</a></li>
-            <li><a href="index-motion-blur.html">Motion Blur</a></li>
-            <li><a href="index-animation.html">Animation</a></li>
-          </ul>
+        <li><a href="index.html">Home</a>
+          
         </li>
-        <li><a href="unicord.html">Unicord</a></li>
-        <li><a href="#">Showcases</a>
-          <ul>
-            <li><a href="showcases-four-cols.html">4 Columns</a></li>
-            <li><a href="showcases-three-cols.html">3 Columns</a></li>
-            <li><a href="showcases-two-cols.html">2 Columns</a></li>
-          </ul>
+        <li><a href="unicord.html">About Us</a></li>
+        <li><a href="showcases-four-cols.html">Case Studies</a>
+         
         </li>
         <li><a href="news.html">News</a></li>
         <li><a href="say-hello.html">Say Hello</a></li>
@@ -100,9 +90,9 @@
   <nav class="navbar">
     <div class="logo"> <a href="index.html"><img src="images/logo.png" alt="Image"></a> </div>
     <!-- end logo -->
-    <div class="email-us">Say <a href="#"><span>hello</span>@unicord.com</a></div>
+    <div class="email-us">Say <a href="#"><span>hello</span> Info@happyusentertainment.com</a></div>
     <!-- end email-us -->
-    <div class="languages"> <a href="#" class="active">EN</a> <a href="#">RU</a> </div>
+    <!--  -->
     <!-- end languages -->
     <div class="sandwich-nav"> <b>MENU</b>
       <div class="sandwich-btn circle" id="sandwich-btn" data-dist="7"> <span></span> <span></span> </div>
@@ -280,7 +270,14 @@
 
     </section>
 
-
+    <div class="calltoaction">
+      <div class="text">
+          Want to start a project?
+          <br>
+          Let's bring your vision to life - start here.
+      </div>
+      <a href="#" class="button">Schedule a discovery call</a>
+  </div>
 
 
     <footer class="footer">
@@ -305,6 +302,7 @@
   <audio id="link" src="audio/link.mp3" preload="auto"></audio>
   <audio id="hover-audio" src="audio/hover.mp3" preload="auto"></audio>
 
+
   <!-- JS FILES -->
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
@@ -316,10 +314,10 @@
   <script src="js/jquery.typewriter.js"></script>
   <script src='js/TweenMax.min.js'></script>
   <script src='js/imagesloaded.pkgd.min.js'></script>
-  <script src='js/jquery.easing.min.js'></script>
+  <script src='js/particles.min.js'></script>
+  <script src='js/jquery.parallax.min.js'></script>
+  <script src='js/motion.blur.js'></script>
   <script src="js/scripts.js"></script>
-  <script></script>
-
 
 </body>
 
